@@ -1,3 +1,6 @@
+07/13/20
+  - Fixed when single tag is left over in batch read
+
 07/09/20
   - Fixes for Micro800 strings
 
